# piyano

./: .gitignore  CMakeLists.txt
docs/: project-documentation.tex
main/: CMakeLists.txt  Midi.cpp  Midi.h  UsbMidi.cpp  UsbMidi.h  main.cpp
main/engine/: AudioContext.cpp  AudioContext.h  Sound.cpp  Sound.h  SynthEngine.cpp  SynthEngine.h
main/instruments/: DrumKitInstrument.cpp  DrumKitInstrument.h  FMInstrument.cpp  FMInstrument.h  IInstrument.h  InstrumentManager.cpp  InstrumentManager.h  ModularInstrument.cpp  ModularInstrument.h  Patch.h  PatchBuilder.h  PatchConfig.h  PatchDriver.h  PatchDriverRegistry.cpp  PatchDriverRegistry.h  PatchInstrument.cpp  PatchInstrument.h  Presets.h  SubtractiveInstrument.cpp  SubtractiveInstrument.h
main/synth/: Constants.h
main/synth/dsp/: Approx.h  Prng.h  Util.h  WaveTables.cpp  WaveTables.h
main/synth/mix/: GlobalMixer.h
main/synth/modulation/: ModMatrix.h
main/synth/modules/: Adsr.h  DrumVoices.h  Exciter.h  Filter.h  FilterBank.h  FmOscBank.h  Lfo.h  Noise.h  NoiseGen.h  Oscillator.h  Resonator.h  Shaper.h  Smoother.h
main/synth/voice/: VoiceAllocator.h
main/workstation/: Params.h  Preset.h  Workstation.cpp  Workstation.h
tools/: gen_wavetables.py  setup_espidf.bat
